fix: overflow to overflow-x

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -216,7 +216,7 @@ header {
     margin-bottom: 10%;
   }
   .projects-container {
-    overflow: hidden;
+    overflow-x: scroll;
     .project-content {
       transition: transform 0.5s ease-in-out;
       transform: translateX(0);
